add css changes and file image

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <title>Faraz</title>
 </head>
 <body>
-
-<h1>My name is faraz</h1>
+<style>
+    .title{
+        color:aquamarine;
+    }
+</style>
+<h1 class="title" >My name is faraz</h1>
 <p>I am a software developer in berlin.</p>
+<img src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM"/>
 
 </body>
 </html>
