changed the color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <style>
     .title{
-        color:aquamarine;
+        color:rgb(146, 127, 255);
     }
 </style>
 <h1 class="title" >My name is faraz</h1>
