experimented basic css inline,external and css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Faraz</title>
+    <link rel="stylesheet" type=" text/css" href="index.css">
 </head>
 <style>
     body {
@@ -10,32 +11,37 @@
     }
 
     h1 {
-
         color: black;
     }
 
+
     p {
-        font-family: verdana;
-        font-size: 20px;
+        text-align: justify;
+    }
+
+    .center {
+        text-align: right;
     }
 </style>
 
+
 <body>
-    <div style="text-align:center;">
-        <h1>My name is faraz</h1>
-        <p>I am a software developer in berlin.</p>
-        <a href="https:www.google.com"><img
+
+    <h1 class="center">My name is Faraz</h1>
+    <p style="text-align: center;"> I am a software developer in berlin.</p>
+    <div style="text-align: center;"><a href="https:www.google.com"><img
                 src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM" />
-        </a>
-        <p> This project will cover my journey as a Developer. Before we begin, A short
-            introduction about
-            myself. I am an Indian based in
-            Germany for the past five years. I come with 10 years of functional experience in various domains. I am a
-            certified Scrum Master and Tester (ISTQB)
-            I have been working for a company called Applause. It specialize in Crowdtesting solution. The clientele
-            comprises of leading players in every
-            vertical.</p>
     </div>
+    </a>
+    <p id="css-example-id"> This project will cover my journey as a Developer. Before we begin, A short
+        introduction about
+        myself. I am an Indian based in
+        Germany for the past five years. I come with 10 years of functional experience in various domains. I am a
+        certified Scrum Master and Tester (ISTQB)
+        I have been working for a company called Applause. It specialize in Crowdtesting solution. The clientele
+        comprises of leading players in every
+        vertical.</p>
+
 </body>
 
 </html>
