--- a/index.html
+++ b/index.html
@@ -5,24 +5,7 @@
     <title>Faraz</title>
     <link rel="stylesheet" type=" text/css" href="index.css">
 </head>
-<style>
-    body {
-        background-color: cornsilk;
-    }
 
-    h1 {
-        color: black;
-    }
-
-
-    p {
-        text-align: justify;
-    }
-
-    .center {
-        text-align: right;
-    }
-</style>
 
 
 <body>
@@ -33,7 +16,7 @@
                 src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM" />
     </div>
     </a>
-    <p id="css-example-id"> This project will cover my journey as a Developer. Before we begin, A short
+    <p class="main-heading"> This project will cover my journey as a Developer. Before we begin, A short
         introduction about
         myself. I am an Indian based in
         Germany for the past five years. I come with 10 years of functional experience in various domains. I am a
