edited the structure through various css commands

--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 
 <head>
     <title>Faraz</title>
-    <link rel="stylesheet" type=" text/css" href="index.css">
+
+    <style>
+        p {
+            background-color: blueviolet;
+            color: burlywood;
+        }
+    </style>
+
 </head>
 
 
 
 <body>
 
-    <h1 class="center">My name is Faraz</h1>
-    <p style="text-align: center;"> I am a software developer in berlin.</p>
-    <div style="text-align: center;"><a href="https:www.google.com"><img
-                src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM" />
-    </div>
+    <h1>My name is Faraz</h1>
+    <p> I am a software developer in berlin.</p>
+    <a href="https:www.google.com"><img
+            src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM" />
+
     </a>
-    <p class="main-heading"> This project will cover my journey as a Developer. Before we begin, A short
+
+    <p> This project will cover my journey as a Developer. Before we begin, A short
         introduction about
         myself. I am an Indian based in
         Germany for the past five years. I come with 10 years of functional experience in various domains. I am a
