added a background using css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         p {
             background-color: blueviolet;
             color: burlywood;
+            border-style: ridge;
+        }
+
+        body {
+            background-color: coral;
+            opacity: 0.8;
         }
     </style>
 
