--- a/experiement.html
+++ b/experiement.html
@@ -2,24 +2,44 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <style>
-        .center {
-            text-align: center;
-            color: red;
+        body,
+        h1 {
+            font-family: "Raleway", sans-serif
         }
 
-        .large {
-            font-size: 300%;
+        body,
+        html {
+            height: 100%
+        }
+
+        .bgimg {
+            background-image: url("chess-pieces.jpg");
+            min-height: 100%;
+            background-position: center;
+            background-size: cover;
         }
     </style>
-</head>
 
 <body>
 
-    <h1 class="center">This is a css class affected</h1>
-    <p class="center large">This paragraph will be red and center-aligned.</p>
-    <p class="center large">This paragraph will use two classes defined in style element- red, center-aligned, and in a
-        large font-size.</p>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+        <div class="w3-display-topleft w3-padding-large w3-xlarge">
+            Logo
+        </div>
+        <div class="w3-display-middle">
+            <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+            <hr class="w3-border-grey" style="margin:auto;width:40%">
+            <p class="w3-large w3-center">35 days left</p>
+        </div>
+        <div class="w3-display-bottomleft w3-padding-large">
+            Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+        </div>
+    </div>
 
 </body>
 
