--- a/experiement.html
+++ b/experiement.html
@@ -18,7 +18,7 @@
         }
 
         .bgimg {
-            background-image: url("chess-pieces.jpg");
+            background-image: url("https://www.w3schools.com/w3images/forestbridge.jpg");
             min-height: 100%;
             background-position: center;
             background-size: cover;
