--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Faraz</title>
 
     <style>
-        p {
-            background-color: blueviolet;
-            color: burlywood;
-            border-style: ridge;
-        }
+      h1,
+      p {
+        color: white;
+        border-style: ridge;
+        text-align: center;
+      }
 
-        body {
-            background-color: coral;
-            opacity: 0.8;
-        }
+      body {
+        background-image: url(chess-pieces.jpg);
+        opacity: 0.8;
+      }
     </style>
+  </head>
 
-</head>
-
-
-
-<body>
-
+  <body>
     <h1>My name is Faraz</h1>
-    <p> I am a software developer in berlin.</p>
-    <a href="https:www.google.com"><img
-            src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM" />
-
+    <p>I am a software developer in berlin.</p>
+    <a href="/experiement.html"
+      ><img
+        src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM"
+      />
     </a>
 
-    <p> This project will cover my journey as a Developer. Before we begin, A short
-        introduction about
-        myself. I am an Indian based in
-        Germany for the past five years. I come with 10 years of functional experience in various domains. I am a
-        certified Scrum Master and Tester (ISTQB)
-        I have been working for a company called Applause. It specialize in Crowdtesting solution. The clientele
-        comprises of leading players in every
-        vertical.</p>
-
-</body>
-
+    <p>
+      This project will cover my journey as a Developer. Before we begin, A
+      short introduction about myself. I am an Indian based in Germany for the
+      past five years. I come with 10 years of functional experience in various
+      domains. I am a certified Scrum Master and Tester (ISTQB) I have been
+      working for a company called Applause. It specialize in Crowdtesting
+      solution. The clientele comprises of leading players in every vertical.
+    </p>
+  </body>
 </html>
