--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url("")
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -31,13 +31,12 @@ body, html {height: 100%}
       <p class="w3-large w3-center">35 days left</p>
     </div>
     <div class="w3-display-bottomleft w3-padding-large">
-      Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+      Powered by <a href="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM" target="_blank">w3.css</a>
     </div>
   </div>
   
 <h1>My name is faraz</h1>
 <p>I am a software developer in berlin.</p>
-<img src="https://media-exp1.licdn.com/dms/image/C4D03AQG2e-p34HxaiA/profile-displayphoto-shrink_400_400/0?e=1603324800&v=beta&t=pJiFSaoAQpFb06__B1XseVQHEnsq1LbyeBztbmwfFnM"/>
 
 </body>
 </html>
